Stories: fix invalid header when keyboard slides up on mobile

--- a/httpdocs/_css/stories/style.css
+++ b/httpdocs/_css/stories/style.css
@@ -265,6 +265,7 @@ nav .arrow:hover {
   padding:10px 0;
   z-index:1000;
   text-align:center;
+  top:0px !important;
 }
 
 #invalid p {
